--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -110,10 +110,11 @@
                                 display: flex;
                                 flex-direction: column;
                                 width: 12rem;
-                                padding: 1.25rem;
+                                padding: 1rem 1.25rem;
                                 row-gap: 0.75rem;
                                 text-decoration: none;
                                 color: inherit;
+                                font-size: 0.938rem;
                                 cursor: pointer;
                                 border-radius: 1rem;
                                 justify-content: space-between;
@@ -125,15 +126,21 @@
                                     align-items: center;
                                     column-gap: 1.125rem;
 
-                                    .header__icon {
-                                        width: 1.25rem;
-                                        font-size: 0.9rem;
-                                        text-align: center;
-                                    }
-
                                     .header__name {
-                                        font-weight: 300;
-                                        color: #707070;
+                                        font-weight: 350;
+                                    }
+                                }
+
+                                .item__content {
+                                    display: flex;
+                                    column-gap: 0.25rem;
+
+                                    img {
+                                        width: 2.25rem;
+                                        height: 2.25rem;
+                                        padding: 8px;
+                                        border: 1px solid #dddddd;
+                                        border-radius: 10px;
                                     }
                                 }
 
@@ -141,7 +148,7 @@
                                     .footer__status {
                                         display: flex;
                                         align-items: center;
-                                        column-gap: 0.5rem;
+                                        column-gap: 1rem;
 
                                         .status__icon {
                                             width: 6px;
@@ -159,7 +166,7 @@
 
                                         .status__name {
                                             color: #707070;
-                                            font-weight: 400;
+                                            font-weight: 350;
                                             font-size: 0.875rem;
                                         }
                                     }
@@ -205,8 +212,7 @@
                                 }
 
                                 .item__name {
-                                    font-weight: 300;
-                                    color: #707070;
+                                    font-weight: 350;
                                     width: 11rem;
                                 }
 
